--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "gatsby-transformer-sharp": "^4.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.0.3",
     "react-date-picker": "^8.3.6",
     "react-datepicker": "^4.4.0",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.0.2",
     "yarn": "^1.22.17"
   },
   "devDependencies": {
